--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>test_1</title>
+    <title></title>
+    <script src="CDN域名/third/vue/2.6.10/vue.min.js"></script>
+    <script src="CDN域名/third/vue-router/3.1.3/vue-router.js"></script>
+    <script src="CDN域名/third/vux/3.1.1/vuex.js"></script>
+    <script src="CDN域名/third/axios/0.19.0/axios.min.js"></script>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but test_1 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
